--- a/templates/email-template.html
+++ b/templates/email-template.html
@@ -31,7 +31,7 @@
         <h2>{{otp}}</h2>
         <p>Enter the OTP accurately and within 10 minutes. It is valid for a single use only and should not be shared with anyone, including our support staff.</p>
         <p>Thank you for your cooperation.</p>
-        <p>Regards,<br>CompanyName</p>
+        <p>Regards,<br>PSCGREEN</p>
     </div>
 </body>
 </html>
