Final stage commit

--- a/templates/email-template.html
+++ b/templates/email-template.html
@@ -32,6 +32,7 @@
         <p>Enter the OTP accurately and within 10 minutes. It is valid for a single use only and should not be shared with anyone, including our support staff.</p>
         <p>Thank you for your cooperation.</p>
         <p>Regards,<br>PSCGREEN</p>
+        <a href="https://www.pscgreen.com" >https://www.pscgreen.com</a>
     </div>
 </body>
 </html>
